Added Api Gateway

--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=post-service
 
 server.port=9010
 
+server.servlet.context-path=/posts
 spring.datasource.url=jdbc:postgresql://localhost:5432/postsDB
 spring.datasource.username=postgres
 spring.datasource.password=root
