--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -73,6 +73,11 @@
 			<version>0.12.6</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>4.2.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
