--- a/connections-service/src/main/resources/application.yml
+++ b/connections-service/src/main/resources/application.yml
@@ -1,10 +1,10 @@
-spring.application.name=connections-service
-
-server.servlet.context-path=/connections
-server.port=9030
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-spring.neo4j.uri=bolt://localhost:7687
-spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=password
+spring:
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: ${spring.application.name}
+      key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json:
+          trusted.packages: com.dhruvil.linkedin.*
