Added The Docker Compose fle

--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=post-service
 server.port=9010
 
 server.servlet.context-path=/posts
-spring.datasource.url=jdbc:postgresql://localhost:5432/postsDB
+spring.datasource.url=jdbc:postgresql://post-db:5432/postsDB
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka/
